--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,6 +17,9 @@ galaxy_info:
   - name: FreeBSD
     versions:
     - all
+  - name: ArchLinux
+    versions:
+    - all
   galaxy_tags:
     - ssh
     - system
